--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "accounts": [
     {
-      "username": "username",
-      "password": "sha1(password)"
+      "username": "ml2growdep",
+      "password": "454f1b5de8b016bb1ac017662505bcb3035be873"
     }
   ]
 }
