Update .gitlab-ci.yml - Forgot to install libs!

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,11 +19,11 @@ deploy_production:
     - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
     - apt-get update && apt-get install -y google-cloud-sdk
   script:
+    - pip install -U -t libs -r requirements-app.txt
     - echo $DEPLOY_KEY_FILE_PRODUCTION > /tmp/$CI_PIPELINE_ID.json
     - gcloud auth activate-service-account --key-file /tmp/$CI_PIPELINE_ID.json
     - echo $ML2GROW_HTTP_AUTH > config.json
     - cat config.json
-    - ls
     - gcloud --verbosity=info --quiet --project $PROJECT_ID_PRODUCTION app deploy app.yaml
   after_script:
     - rm /tmp/$CI_PIPELINE_ID.json
