Added support for user access roles
- basic_auth decorator now accepts an optional list of required roles
- Accounts in config.json file can also specify one or more user roles
- Required roles are checked against user's roles when endpoint is called

--- a/config.json
+++ b/config.json
@@ -1,8 +1,13 @@
 {
   "accounts": [
     {
-      "username": "user",
+      "username": "read_only_user",
       "password": "password"
+    },
+    {
+      "username": "read_write_user",
+      "password": "password",
+      "roles": ["write"]
     }
   ]
 }
