--- a/app.yaml
+++ b/app.yaml
@@ -14,9 +14,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-runtime: python27
-api_version: 1
-threadsafe: yes
+runtime: python311
+app_engine_apis: true
 
 handlers:
 - url: /favicon\.ico
@@ -24,21 +23,4 @@ handlers:
   upload: favicon\.ico
 
 - url: .*
-  script: gaepypi.app
-
-libraries:
-- name: webapp2
-  version: latest
-- name: jinja2
-  version: latest
-- name: six
-  version: latest
-
-skip_files:
-- ^(.*/)?#.*#$
-- ^(.*/)?.*~$
-- ^(.*/)?.*\.py[co]$
-- ^(.*/)?.*/RCS/.*$
-- ^(.*/)?\..*$
-- ^tests/.*$
-- ^\..*$
+  script: auto
